fix the issue long-content wrap to new line.

--- a/sass/global.sass
+++ b/sass/global.sass
@@ -23,6 +23,7 @@ body, html, pre
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  overflow: hidden;
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
